--- a/src/scene/Main-Page/index.css
+++ b/src/scene/Main-Page/index.css
@@ -3,14 +3,21 @@
   margin-top: 100px;
 }
 
-.home span {
-  display: none;
+.home hr {
+  width: 50%;
+  margin-bottom: 50px;
 }
 
-.home button {
-  margin-top: 25px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  line-height: 1.5;
+.home a {
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.home a:hover {
+  transition: 0.3s;
+  border: 1px solid rgb(167, 166, 166);
 }
